# cookiecutter-ds-uv-template

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: config.yaml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: config.py  example.py
