[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = [{ name = "{{ cookiecutter.author_name }}" }]
requires-python = ">=3.11"

dependencies = [
  "numpy",
  "pandas",
  "geopandas",
  "matplotlib",
  "pyyaml",
  "ruff",
  "pre-commit",
  "typer",
  "tqdm",
  "scikit-learn",
  "pymdown-extensions",
  "mkdocstrings-python",
  "mkdocs-material",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "FLY", "RUF", "B", "ICN"]
ignore = []

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]
