[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "matplotlib",
    "scikit-learn",
    "typer",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
docs = [
    "pymdown-extensions",
    "mkdocstrings-python",
    "mkdocs-material",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "FLY", "RUF", "B", "ICN"]
ignore = []

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]
